==> Roberto-Rod/k-cema/manpack/mp_csm_test_jig_utility/Application/Src/serial_cmd_task.c <==
#include "serial_cmd_task.h"
#include "io_task.h"
#include "version.h"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <ctype.h>
#define SCT_MAX_BUF_SIZE		256
#define SCT_CMD_HISTORY_LEN		20
#define SCT_CRLF                "\r\n"          /* Carriage return & line feed */
#define SCT_CR                  "\r"            /* Carriage return only */
#define SCT_LF                  "\n"            /* New line only */
#define SCT_TAB                 "\t"            /* Horizontal tab */
#define SCT_CLS                 "[2J"          /* Clear screen */
#define SCT_CL                  "[K"           /* Clear from cursor to end of line */
#define SCT_ERASE_LINE          "[2K"
#define SCT_HOME                "[H"           /* Move cursor to top corner */
#define SCT_LINE_HOME           "[1000D"       /* Assumes the current line isn't longer than 1000 characters! */
#define SCT_RESETSCREEN         "[0;37;40m" CLS HOME
#define SCT_REDTEXT             "[0;1;31m"
#define SCT_YELLOWTEXT          "[0;1;33m"
#define SCT_GREENTEXT           "[0;1;32m"
#define SCT_WHITETEXT           "[0;1;37m"
#define SCT_DEFAULTTEXT         WHITETEXT
#define SCT_FLASHTEXT           "[5m"
#define SCT_UNDERLINETEXT       "[4m"
#define SCT_RESETTEXTATTRIBUTES "[0m"
#define SCT_CURSOR_UP			"[A"
#define SCT_CURSOR_DOWN			"[B"
#define SCT_CURSOR_FORWARD		"[C"
#define SCT_CURSOR_BACK			"[D"
#define SCT_CURSOR_NEXT_LINE	"[E"
#define SCT_CURSOR_PREV_LINE	"[F"

static void sct_ProcessCommand(uint8_t *cmd_buf, uint8_t *resp_buf)
{
	sprintf((char *)resp_buf, "%s", SCT_CRLF);
	sct_FlushRespBuf(resp_buf);

	/* Try and find a match for the command */
	if (!strncmp((char *)cmd_buf, SCT_READ_GPI_CMD, SCT_READ_GPI_CMD_LEN))
	{
		sct_ProcessReadGpiCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_SET_GPO_CMD, SCT_SET_GPO_CMD_LEN))
	{
		sct_ProcessSetGpoCommand(cmd_buf, resp_buf);
	}
	/* Set PPS command ordering is important, check for longest command first */
	else if (!strncmp((char *)cmd_buf, SCT_SET_PPS_IP_SRC_CMD, SCT_SET_PPS_IP_SRC_CMD_LEN))
	{
		sct_ProcessSetPpsIpSrcCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_SET_PPS_DIR_CMD, SCT_SET_PPS_DIR_CMD_LEN))
	{
		sct_ProcessSetPpsDirCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_SET_PPS_EN_CMD, SCT_SET_PPS_EN_CMD_LEN))
	{
		sct_ProcessEnablePpsCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_READ_PPS_CMD, SCT_READ_PPS_CMD_LEN))
	{
		sct_ProcessReadPpsCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_GET_ADC_DATA_CMD, SCT_GET_ADC_DATA_CMD_LEN))
	{
		sct_ProcesssGetAdcDataCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_HW_CONFIG_INFO_CMD, SCT_HW_CONFIG_INFO_CMD_LEN))
	{
		sct_ProcessHwConfigInfoCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_HW_RST_CONFIG_INFO_CMD, SCT_HW_RST_CONFIG_INFO_CMD_LEN))
	{
		 sct_ProcessResetHwConfigInfoCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_HW_SET_PARAM_CMD, SCT_HW_SET_PARAM_CMD_LEN))
	{
		sct_ProcessSetHwConfigInfoCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_SET_I2C_BUS_CMD, SCT_SET_I2C_BUS_CMD_LEN))
	{
		sct_ProcessSetI2cBusCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_INIT_FAN_CTRLR, SCT_INIT_FAN_CTRLR_LEN))
	{
		sct_ProcessInitFanControllerCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_FAN_GET_SPEED_CMD, SCT_FAN_GET_SPEED_CMD_LEN))
	{
		sct_ProcessGetFanSpeedCommand(resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_FAN_SET_DUTY, SCT_FAN_SET_DUTY_LEN))
	{
		sct_ProcessSetFanDutyCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_SET_FAN_PWM_SRC_CMD, SCT_SET_FAN_PWM_SRC_CMD_LEN))
	{
		sct_ProcessSetFanPwmSourceCommand(cmd_buf, resp_buf);
	}
	else if (!strncmp((char *)cmd_buf, SCT_FAN_GET_DUTY_CMD, SCT_FAN_GET_DUTY_CMD_LEN))
	{
		sct_ProcessGetFanDutyCommand(resp_buf);
	}
	else
	{
		sct_ProcessUnkownCommand(resp_buf);
	}
}

static void sct_ProcessReadGpiCommand(uint8_t *resp_buf)
{
	iot_GpioPinState_t pin_state = reset;
	iot_GpiPinId_t i = 0;
	const char *p_chanel_name = NULL;

	for (i = ntm1_fan_alert; i <= ntm3_pfi_n; ++i)
	{
		pin_state =	iot_GetGpiPinState(i, &p_chanel_name);
		sprintf((char *)resp_buf, "%d - %s%s", pin_state, p_chanel_name, SCT_CRLF);
		sct_FlushRespBuf(resp_buf);
	}

	sprintf((char *)resp_buf, "%s%s", SCT_READ_GPI_RESP, SCT_CRLF);
	sct_FlushRespBuf(resp_buf);
}

static void sct_ProcessSetGpoCommand(uint8_t *cmd_buf, uint8_t *resp_buf)
{
	int16_t signal = 0;
	int16_t set_state = 0;
	iot_GpoPinId_t gpo_pin;
	sct_GpoSignals_t signal_id;
	int32_t no_params = sscanf((char *)cmd_buf, SCT_SET_GPO_CMD_FORMAT, &signal, &set_state);

	if (no_params == SCT_SET_GPO_CMD_FORMAT_NO)
	{
		/* Map serial interface signal id to IO task pin id */
		switch ((sct_GpoSignals_t)signal)
		{
		case tamper_switch_buzzer:
		    gpo_pin = tamper_sw_buzzer;
		    break;

		case rcu_power_button:
            gpo_pin = rcu_pwr_btn;
            break;

		case som_sd_boot_enable:
            gpo_pin = som_sd_boot_en;
            break;

		case rcu_pwr_enable_zeroise_out:
            gpo_pin = rcu_pwr_en_zer_out;
            break;

		case sel_i2c_s0:
            gpo_pin = select_i2c_s0;
            break;

		case sel_i2c_s1:
            gpo_pin = select_i2c_s1;
            break;

		case ms_1pps_direction_control:
            gpo_pin = ms_1pps_dir_ctrl;
            break;

		case sel_1pps_s0:
            gpo_pin = select_1pps_s0;
            break;

		case sel_1pps_s1:
            gpo_pin = select_1pps_s1;
            break;

		case sel_1pps_s2:
            gpo_pin = select_1pps_s2;
            break;

		case sel_1pps_s3:
            gpo_pin = select_1pps_s3;
            break;

		case ms_power_enable_in:
            gpo_pin = ms_pwr_en_in;
            break;

		case ms_master_select_n:
            gpo_pin = ms_master_n;
            break;

		case test_point_1_out:
            gpo_pin = test_point_1;
            break;

		case test_point_2_out:
            gpo_pin = test_point_2;
            break;

		case control_ms_rf_mute_n_out:
            gpo_pin = ms_rf_mute_n_out;
            break;

		case control_ms_rf_mute_dir:
            gpo_pin = ms_rf_mute_dir;
            break;

		case sel_fan_pwm_s0:
            gpo_pin = select_fan_pwm_s0;
            break;

		case sel_fan_pwm_s1:
            gpo_pin = select_fan_pwm_s1;
            break;

		case sel_fan_pwm_s2:
            gpo_pin = select_fan_pwm_s2;
            break;

		default:
			gpo_pin = -1;
			break;
		}

		/* Validate the gpo_pin parameter and set pin state */
		if ((gpo_pin >= tamper_sw_buzzer) && (gpo_pin < gpo_pin_qty))
		{
			iot_SetGpoPinState(gpo_pin, (set_state == 0 ? reset : set));

			sprintf((char *)resp_buf, "%s set to: %s%s",
					lg_sct_gpo_signal_names[signal], ((set_state == 0) ? "0" : "1"), SCT_CRLF);
			sct_FlushRespBuf(resp_buf);
		}
		else
		{
			sprintf((char *)resp_buf, "*** Unknown GPO Pin! ***%s", SCT_CRLF);
			sct_FlushRespBuf(resp_buf);
		}
	}
	else if (no_params == -1)
	{
		/* If there was an error with the number of parameters print help message */
		sprintf((char *)resp_buf, "Command format #GPO <Signal ID> <0|1> <ENTER>:%s", SCT_CRLF);
		sct_FlushRespBuf(resp_buf);
		sprintf((char *)resp_buf, "Available Signals IDs (integer value):%s", SCT_CRLF);
		sct_FlushRespBuf(resp_buf);

		for (signal_id = tamper_switch_buzzer; signal_id < gpo_signal_qty; ++signal_id)
		{
			sprintf((char *)resp_buf, "%d - %s%s",
					signal_id, lg_sct_gpo_signal_names[signal_id], SCT_CRLF);
			sct_FlushRespBuf(resp_buf);
		}
	}
	else
	{
		sprintf((char *)resp_buf, "*** Parameter Error! ***%s", SCT_CRLF);
		sct_FlushRespBuf(resp_buf);
	}

	sprintf((char *)resp_buf, "%s%s", SCT_SET_GPO_RESP, SCT_CRLF);
	sct_FlushRespBuf(resp_buf);
}

static void sct_ProcessSetHwConfigInfoCommand(uint8_t *cmd_buf, uint8_t *resp_buf)
{
	int32_t param_to_set;
	bool param_set = false;
	char param[HCI_STR_PARAM_LEN] = {0};

	if (sscanf((char *)cmd_buf, SCT_HW_SET_PARAM_CMD_FORMAT,
			(int *)&param_to_set, param) == SCT_HW_SET_PARAM_CMD_FORMAT_NO)
	{
		/* Ensure last character of string to set is null terminator */
		param[HCI_STR_PARAM_LEN - 1] = 0U;

		if (param_to_set <= sct_BuildBatchNo)
		{
			switch (param_to_set)
			{
			case sct_PartNo:
				param_set = iot_SetAssyPartNo((uint8_t *)param);
				break;

			case sct_RevNo:
				param_set = iot_SetAssyRevNo((uint8_t *)param);
				break;

			case sct_SerialNo:
				param_set = iot_SetAssySerialNo((uint8_t *)param);
				break;

			case sct_BuildBatchNo:
				param_set = iot_SetAssyBuildDataBatchNo((uint8_t *)param);
				break;

			default:
				param_set = false;
				break;
			}

			if (param_set)
			{
				sprintf((char *)resp_buf,
						"Successfully set parameter [%s] to [%s]%s",
						sct_SetHciParamStrings[param_to_set], param, SCT_CRLF);
			}
			else
			{
				sprintf((char *)resp_buf,
						"*** Failed to set parameter [%s] ***%s",
						sct_SetHciParamStrings[param_to_set], SCT_CRLF);
			}
		}
		else
		{
			sprintf((char *)resp_buf, "*** Unknown Parameter! ***%s", SCT_CRLF);
		}
	}
	else
	{
		sprintf((char *)resp_buf, "*** Parameter Error! ***%s", SCT_CRLF);
	}
	sct_FlushRespBuf(resp_buf);

	sprintf((char *)resp_buf, "%s%s", SCT_HW_SET_PARAM_RESP, SCT_CRLF);
	sct_FlushRespBuf(resp_buf);
}
